軽微な修正

--- a/tests/template/timetable_class_part.html
+++ b/tests/template/timetable_class_part.html
@@ -1,27 +1,11 @@
-<b><font color="red">■{%period}限目</font></b><br />
-●ユニット名<br />
-　{%unit_num%}<br />
-●講義内容<br />
-　{%thema%}<br />
-●講義室<br />
-　{%room%}<br />
-●担当教員<br />
-　{%teachers%}<br />
+<b><font color="red">??{%period}????</font></b><br />
+?????j?b?g??<br />
+?@{%unit_num%}<br />
+???u?`???e<br />
+?@{%thema%}<br />
+???u?`??<br />
+?@{%room%}<br />
+???S??????<br />
+?@{%teachers%}<br />
 <br />
 {%handout_link%}
-
-<!--
-<br />
-教材<br />
-<a href="./View_Kyozai.php?kn=2023M3200620&kg=71&kz=1">20230725_肝病理実習資料</a>
-<span id='' class='ico_downloaded ico_downloaded-nodownloaded'>未読</span><br><br />
--->
-
-<!--
-教材<br />
-　<a href="./View_Kyozai.php?kn=2023M11005002&kg=25&kz=1">細胞生物学(物理_電磁気4)_資料</a>
-<span id='' class='ico_downloaded ico_downloaded-nodownloaded'>未読</span><br>　<a href="./View_Kyozai.php?kn=2023M11005002&kg=25&kz=2">練習問題(電磁気)</a>
-<span id='' class='ico_downloaded ico_downloaded-nodownloaded'>未読</span><br>　<a href="./View_Kyozai.php?kn=2023M11005002&kg=25&kz=3">細胞生物学(物理_電磁気4)_解答例</a>
-<span id='' class='ico_downloaded ico_downloaded-nodownloaded'>未読</span><br>　<a href="./View_Kyozai.php?kn=2023M11005002&kg=25&kz=4">練習問題(電磁気)_解説付き解答例</a>
-<span id='' class='ico_downloaded ico_downloaded-nodownloaded'>未読</span><br><br />
--->
