--- a/tests/template/login_failed.html
+++ b/tests/template/login_failed.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html charset=Shift_JIS" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
-<link rel="stylesheet" href="https://kt.kanazawa-med.ac.jp/common/keitai_common.css?1987032868000z">
+<link rel="stylesheet" href="https://kt.kanazawa-med.ac.jp/common/keitai_common.css?19870328x68000">
 <link rel="stylesheet" href="https://kt.kanazawa-med.ac.jp/common/fontawesome/css/all.css">
 <script>window.onunload = function(){}; history.forward();</script>
 <title>ログイン失敗</title>
