--- a/tests/template/timetable_no_class.html
+++ b/tests/template/timetable_no_class.html
@@ -37,7 +37,10 @@
 <form action="./Change_Timetable.php" name="change_menu" method="post">
 	<div><input type="submit" value="日付・学年変更" /></div>
 </form>
-{%class_infos%}
+<br />
+この日に講義はありません。<br />
+前の日もしくは次の日ボタンを押すと、直近の講義のある日にジャンプできます。<br />
+<br />
 <table cellpadding="0" cellspacing="0" border="0">
 	<td><div>
 	<form action="#" name="prev1" method="post">
